# uvicoord

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: example-config.json
core/: README.md  pyproject.toml
core/src/uvicoord/: __init__.py  models.py
core/src/uvicoord/cli/: main.py
core/src/uvicoord/service/: main.py
docker/: Dockerfile  README.md  compose.yml
nixos/: README.md  pyproject.toml
nixos/nix/: flake.nix
nixos/src/uvicoord_nixos/: __init__.py  cli.py  platform.py
src/uvicoord/: __init__.py
src/uvicoord/cli/: __init__.py  main.py
src/uvicoord/service/: __init__.py  main.py  port_manager.py  windows_service.py
windows/: README.md  pyproject.toml
windows/src/uvicoord_windows/: __init__.py  cli.py  platform.py
