[project]
name = "uvicoord"
version = "0.1.0"
description = "Uvicorn Coordinator - Port registry and launcher for Python web applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "psutil>=5.9.0",
    "pywin32>=306",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
uvicoord = "uvicoord.cli.main:app"
uvicoord-service = "uvicoord.service.main:run_service"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvicoord"]
