[project]
name = "uvicoord-nixos"
version = "0.2.0"
description = "Uvicoord NixOS/systemd integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "uvicoord>=0.2.0",
]

[project.scripts]
uvicoord = "uvicoord_nixos.cli:app"

[project.entry-points."uvicoord.platforms"]
nixos = "uvicoord_nixos:NixOSPlatform"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvicoord_nixos"]
