[project]
name = "uvicoord-windows"
version = "0.2.0"
description = "Uvicoord Windows integration - Task Scheduler and service management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "uvicoord>=0.2.0",
    "pywin32>=306",
]

[project.scripts]
uvicoord = "uvicoord_windows.cli:app"

[project.entry-points."uvicoord.platforms"]
windows = "uvicoord_windows:WindowsPlatform"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvicoord_windows"]
